--- a/Base0/index.html
+++ b/Base0/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css" crossorigin="anonymous"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/css/foundation.min.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://raw.githubusercontent.com/fractalmandala/New-Web/master/Base0/rtaindesign.css">
 </head>
 <body>
   <div class="rta-2col">
@@ -18,11 +18,5 @@
     <p>a standard paragraph text</p>
     <a href="">standard hyperlink text</a>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/js/foundation.min.js" crossorigin="anonymous"></script>
-  <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/what-input.js"></script>
-    <script>
-      $(document).foundation();
-    </script>
 </body>
 </html>
