--- a/foundation-sites-develop/index.html
+++ b/foundation-sites-develop/index.html
@@ -8,6 +8,6 @@
   <link rel="stylesheet" href="./dist/css/foundation.css">
 </head>
 <body>
-  
+  <div class="card">lets see</div>
 </body>
 </html>
