--- a/Base0/anveshicard.html
+++ b/Base0/anveshicard.html
@@ -30,21 +30,25 @@
           <div class="card-content">
             <div class="rtacard-section">ITINERARY</div>
             <div class="card-timeline">
+              <div class="card-item" data-year="Day 0">
+                <div class="card-item-title">Everyone Arrives and stays in Bhubaneswar for the night.</div>
+                <div class="card-item-desc"></div>
+              </div>
               <div class="card-item" data-year="Day 1">
-                <div class="card-item-title">Front-end Developer at <span>JotForm</span></div>
-                <div class="card-item-desc">Disrupt stumptown retro everyday carry unicorn.</div>
+                <div class="card-item-title">Start at 08:00 am in the morning for having darshana in the Mukteshvara Temple Complex:</div>
+                <div class="card-item-desc"></div>
               </div>
               <div class="card-item" data-year="Day 2">
-                <div class="card-item-title">UI Developer at <span>GitHub</span></div>
-                <div class="card-item-desc">Developed new conversion funnels and disrupt.</div>
+                <div class="card-item-title">Start at 08:00 am in the morning and go for darshana in Bhubaneshwar temples. Go for darshana at Lingaraja and then Ananta Basudeva and Ekamreshvara. Have lunch at 12:30 pm.</div>
+                <div class="card-item-desc"></div>
               </div>
               <div class="card-item" data-year="Day 3">
-                <div class="card-item-title">Illustrator at <span>Google</span></div>
-                <div class="card-item-desc">Onboarding illustrations for App.</div>
+                <div class="card-item-title">Start at 08:00 am in the morning and study architecture and sculpture at Konark until lunch at 12:30 pm.</div>
+                <div class="card-item-desc"></div>
               </div>
               <div class="card-item" data-year="Day 4">
-                <div class="card-item-title">Full-Stack Developer at <span>CodePen</span></div>
-                <div class="card-item-desc">Responsible for the encomposing brand expreience.</div>
+                <div class="card-item-title">Check out from Konark hotel in the morning at 08:00 am. Proceed to Puri and finish darshan at Puri by 12:00 noon. Have lunch at 12:30.</div>
+                <div class="card-item-desc"></div>
               </div>
             </div>
           </div>
